--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-player": "^1.15.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
