--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "abdulrhmanJo",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "moviedb": "^0.2.10",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
