delete server side and use serverless provider firebase

--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "tvlist",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "author": "abdulrhmanJo",
-  "license": "MIT",
+  "name": "clinet",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "concurrently": "^5.1.0",
-    "express": "^4.17.1",
-    "morgan": "^1.9.1",
-    "node-fetch": "^2.6.0"
+    "node-sass": "^4.13.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-icons": "^3.9.0",
+    "react-infinite-scroll-component": "^5.0.4",
+    "react-player": "^1.15.2",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-slick": "^0.25.2",
+    "react-spinners": "^0.8.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
